; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_mbx.c_ixgbe_check_for_msg_pf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_mbx.c_ixgbe_check_for_msg_pf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_hw = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@IXGBE_ERR_MBX = common dso_local global i64 0, align 8
@IXGBE_MBVFICR_VFREQ_VF1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ixgbe_hw*, i32)* @ixgbe_check_for_msg_pf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ixgbe_check_for_msg_pf(%struct.ixgbe_hw* %0, i32 %1) #0 {
  %3 = alloca %struct.ixgbe_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.ixgbe_hw* %0, %struct.ixgbe_hw** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i64, i64* @IXGBE_ERR_MBX, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @IXGBE_MBVFICR_INDEX(i32 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i32, i32* %4, align 4
  %12 = srem i32 %11, 16
  store i32 %12, i32* %7, align 4
  %13 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %14 = load i32, i32* @IXGBE_MBVFICR_VFREQ_VF1, align 4
  %15 = load i32, i32* %7, align 4
  %16 = shl i32 %14, %15
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @ixgbe_check_for_bit_pf(%struct.ixgbe_hw* %13, i32 %16, i64 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %27, label %20

20:                                               ; preds = %2
  store i64 0, i64* %5, align 8
  %21 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %22 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %20, %2
  %28 = load i64, i64* %5, align 8
  ret i64 %28
}

declare dso_local i64 @IXGBE_MBVFICR_INDEX(i32) #1

declare dso_local i32 @ixgbe_check_for_bit_pf(%struct.ixgbe_hw*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
